--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -23,6 +23,11 @@ tr th {
 	color: #FFA559;
 }
 
+.border-bottom-orange {
+    border-radius: 8px;
+    border-color: #ff6000;
+    border-bottom: 1px solid;
+}
 
 
 .modal-backdrop {
@@ -69,25 +74,9 @@ tr th {
     padding: 20px 10px;
   }
 
-  .btn-close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none;
-    font-size: 20px;
-    padding: 10px;
-    cursor: pointer;
-    font-weight: bold;
-    color: #4AAE9B;
-    background: transparent;
-  }
 
-  .btn-green {
-    color: white;
-    background: #4AAE9B;
-    border: 1px solid #4AAE9B;
-    border-radius: 2px;
-  }
+
+
 
   .modal-mask {
     position: fixed;
@@ -105,7 +94,7 @@ tr th {
     width: 300px;
     margin: auto;
     padding: 20px 30px;
-    background-color: #fff;
+    background-color: #343a40;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
     transition: all 0.3s ease;
@@ -114,6 +103,11 @@ tr th {
   .modal-header h3 {
     margin-top: 0;
     color: #ff6000;
+    background-color: #343a40;
+    padding: 10px 60px 10px 10px;
+    border-radius: 8px;
+    border-color: #ff6000;
+    border-bottom: 1px solid;
   }
   
   .modal-body {
@@ -122,6 +116,7 @@ tr th {
   
   .modal-default-button {
     float: right;
+    color: #343a40!important;
   }
   
   /*
